If a TearFree flip fails, fall back to non-TearFree operation

In order to avoid possible freeze / log file spam in that case.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=99769
Reviewed-by: Alex Deucher <alexander.deucher@amd.com>